kubernetes/skywalker/media/jellyfin.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: jellyfin

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - jellyfin.feldman.in
  http:
    - match:
        - uri:
            prefix: /
      route:
        - destination:
            host: jellyfin
            port:
              number: 8096
