kubernetes/skywalker/media/jellyseer.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: jellyseer

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - jellyseer.feldman.in
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: jellyseer
            port:
              number: 5055
