kubernetes/skywalker/media/prowlarr.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: prowlarr

spec:
  gateways:
    - istio-ingress/feldman-in
  hosts:
    - prowlarr.feldman.in
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: prowlarr
            port:
              number: 9696
