kubernetes/skywalker/media/sonarr.virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService

metadata:
  name: sonarr

spec:
  gateways:
    - istio-system/feldman-in
  hosts:
    - sonarr.feldman.in
  http:
    - match:
      - uri:
          prefix: /
      route:
        - destination:
            host: sonarr
            port:
              number: 8989
